--- a/maipogrande/productor/templates/productor/home-productor.html
+++ b/maipogrande/productor/templates/productor/home-productor.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block titulo %}
     Productor
@@ -27,39 +28,102 @@
 {% endblock %}
 
 {% block contenido %}
-    <p class="lead text-justify">
-        Bienvenido a la zona de productores de la plataforma,
-        en esta podrá realizar todas sus actividades
-        de forma exclusiva, esperamos que sea de su satisfacción, en el
-        apartado izquierdo, podrá realizar las acciones que usted
-        requiera para cubrir sus necesidades.
-    </p>
-    <div class="row">
-        <div class="col-md-4">
-            <h3>Datos comerciales</h3>
-            <p class="text-justify small">
-                Usted podrá:
-                <ul>
-                    <li>Ingresar sus datos comerciales.</li>
-                    <li>Actualizar datos comerciales.</li>
-                </ul>
+
+<!-- Header -->
+    <header class="bg-light mb-5">
+        <div class="container-fluid h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-lg-10">
+                    <h1 class="display-4 text-black mt-5 mb-2">Zona de productores</h1>
+                    <p class="lead mb-5 text-black">
+                        Bienvenido a la zona de productores de la plataforma,
+                        en esta podrá realizar todas sus actividades
+                        de forma exclusiva, esperamos que sea de su satisfacción, en el
+                        apartado izquierdo, podrá realizar las acciones que usted
+                        requiera para cubrir sus necesidades.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h3>Productos</h3>
-            <p class="text-justify small"></p>
-            <ul>
-                <li>Ingresar nuevos productos.</li>
-                <li>Actualizar información de sus productos.</li>
-                <li>Visualizar el estado de sus productos.</li>
-            </ul>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mb-5">
+                <h2>Participe activamente</h2>
+                <hr>
+                <p class="text-justify text-black">
+                    Actualice sus datos y sus productos para tener mayor probabilidad de realizar ventas de productos,
+                    consulte los contratos en los que se encuentra involucrado, estudie su historial de ventas y analize
+                    los reportes de sus procesos anteriores, estos les entregarán información de mucha utilidad.
+                </p>
+            </div>
+            <div class="col-md-4 mb-5">
+                <h2>Contactenos</h2>
+                <hr>
+                <address>
+                    <strong>Maipo Grande</strong>
+                    <br>Hernest Bugenhagen 666
+                    <br>Valdivia, Chile.
+                    <br>
+                </address>
+                <address>
+                    <abbr title="Phone">P:</abbr>
+                    (563) 68 23 15144
+                    <br>
+                    <abbr title="Email">E:</abbr>
+                    <a href="mailto:#">maipogrande-fv@gmail.com</a>
+                </address>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h3>Transacciones</h3>
-            <p class="text-justify small"></p>
-            <ul>
-                <li>Visualizar su estado de ventas.</li>
-                <li>Ver su historial de ventas.</li>
-            </ul>
+
+        <div class="row">
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <img class="card-img-top" src="{% static 'productor/img/comercial-data.jpg' %}" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Datos comerciales</h4>
+                        <p class="card-text">
+                            Usted podrá:
+                        <ul>
+                            <li>Ingresar sus datos comerciales</li>
+                            <li>Actualizar datos comerciales</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <img class="card-img-top" src="{% static 'productor/img/fruit.jpg' %}" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Productos</h4>
+                        <p class="card-text">
+                        <ul>
+                            <li>Ingresar nuevos productos</li>
+                            <li>Actualizar información de sus productos</li>
+                            <li>Visualizar el estado de sus productos</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <img class="card-img-top" src="{% static 'productor/img/statistics.jpg' %}" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">Estadísticas</h4>
+                        <p class="card-text">
+                        <ul>
+                            <li>Visualizar información relevante de sus procesos</li>
+                            <li>Analizar reportes</li>
+                            <li>Entender información de primera mano</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- /.row -->
     </div>
 {% endblock %}
