--- a/maipogrande/cinterno/templates/cinterno/home-interno.html
+++ b/maipogrande/cinterno/templates/cinterno/home-interno.html
@@ -61,7 +61,7 @@
                 <h2>Participe activamente</h2>
                 <hr>
                 <p class="text-justify text-black">
-                    Cree nuevas ordenes de compra, modifice y valide las órdenes en transcurso, consulte el
+                    Cree nuevas ordenes de compra, modifique y valide las órdenes en transcurso, consulte el
                     historial de estas y también el de pagos para tener respaldo y claridad de sus procesos.
                     Analice cómo han sido sus procesos de compra a través de reportes y estadísticas que te
                     permitirán obtener información de primera mano.
