--- a/maipogrande/ordenes/templates/confirmar/confirmar-orden-listar.html
+++ b/maipogrande/ordenes/templates/confirmar/confirmar-orden-listar.html
@@ -87,7 +87,7 @@
     <!-- Aqui parte la seccion cuando no hay nada ingresado -->
     {% else %}
         <p class="lead text-justify">
-            No hay ordenes de compras registradas o 
+            No hay ordenes de compras registradas por confirmar o 
             la busqueda no produjo ningún resultado.<br>
         </p>
     {% endif %}
