--- a/maipogrande/transportista/templates/historial/despachos-cancelados-listar.html
+++ b/maipogrande/transportista/templates/historial/despachos-cancelados-listar.html
@@ -47,7 +47,11 @@
                     <td class="py-0">{{ dispatch.DispatchDate }}</td>
                     <td class="py-0">{{ dispatch.DispatchValue }}</td>
                     <td class="py-0">{{ dispatch.DispatchWeight }} kg</td>
+                    {% if dispatch.CarrierObservation != None %}
                     <td class="py-0" style="text-transform: uppercase">{{ dispatch.CarrierObservation }}</td>
+                    {% else %}
+                    <td class="py-0" style="text-transform: uppercase">SIN OBSERVACION</td>
+                    {% endif %}
                 </tr>
                 {% endfor %}
             </tbody>
